fix for floats in blog footer nav on mobile

--- a/blog/assets/main.scss
+++ b/blog/assets/main.scss
@@ -111,13 +111,8 @@ pre {
     a {
       display: block;
 
-      &.prev {
-        float: none;
-      }
-
       &.next {
-        text-align: left;
-        float: none;
+        float: left;
       }
 
       & + a {
